# caveman-ai-interview-copilot

./: .gitignore  LICENSE  README.md  agent.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: desktop-package-smoke.yml  release.yml
docs/: commercial-release.env.example
docs/architecture/: mvp-slice.md
docs/superpowers/plans/: 2026-05-19-caveman-mvp.md  (+3 more)
scripts/: audio-environment-smoke.mjs  audio-environment-smoke.test.mjs  build-signed-update.ps1  commercial-readiness.mjs  commercial-readiness.test.mjs  configure-commercial-secrets.mjs  configure-commercial-secrets.test.mjs  create-macos-dmg.mjs  create-macos-dmg.test.mjs  dispatch-signed-release.mjs  dispatch-signed-release.test.mjs  generate-latest-json.mjs  generate-latest-json.test.mjs  local-whisper-smoke.mjs  local-whisper-smoke.test.mjs  macos-capture-protection-smoke.mjs  macos-capture-protection-smoke.test.mjs  macos-dmg-meeting-risk-smoke.mjs  macos-dmg-meeting-risk-smoke.test.mjs  macos-meeting-risk-smoke.mjs  macos-meeting-risk-smoke.test.mjs  macos-share-risk-smoke.mjs  macos-share-risk-smoke.test.mjs  notarize-macos-dmg.mjs  notarize-macos-dmg.test.mjs  obs-stealth-smoke.mjs  obs-stealth-smoke.test.mjs  ollama-smoke.mjs  ollama-smoke.test.mjs  openrouter-smoke.mjs  openrouter-smoke.test.mjs  prepare-whisper-sidecars.mjs  prepare-whisper-sidecars.test.mjs  release-workflow.test.mjs  verify-bundled-sidecar.mjs  verify-bundled-sidecar.test.mjs  verify-privacy-shield-package.mjs  verify-privacy-shield-package.test.mjs  windows-meeting-risk-smoke.mjs  windows-meeting-risk-smoke.test.mjs
src/: App.tsx  index.css  main.tsx  overlay.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.release.conf.json
src-tauri/binaries/whisper-runtime/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_apps.rs  collaboration.rs  commands.rs  lib.rs  main.rs  models.rs  ocr.rs  plugins.rs  runtime.rs  screen_share.rs  typing.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/overlay/: mod.rs  mod_test.rs
src-tauri/src/secrets/: mod.rs  mod_test.rs
src-tauri/src/stt/: mod.rs
src-tauri/tests/: collaboration_contract.rs  db_contract.rs
src/lib/: analytics.test.ts  analytics.ts  appConfig.test.ts  appConfig.ts  audioEvents.test.ts  audioEvents.ts  audioPipeline.test.ts  audioPipeline.ts  audioRehearsal.test.ts  audioRehearsal.ts  autoTrigger.test.ts  autoTrigger.ts  codeBlocks.test.ts  codeBlocks.ts  codeHighlight.test.ts  codeHighlight.ts  contextBuilder.test.ts  contextBuilder.ts  deepgramStreaming.test.ts  deepgramStreaming.ts  demoData.ts  formatters.ts  globalHotkeys.test.ts  globalHotkeys.ts  hotkeys.test.ts  hotkeys.ts  knowledge.test.ts  knowledge.ts  livePipelineSmoke.test.ts  livePipelineSmoke.ts  liveTranscription.test.ts  liveTranscription.ts  localWhisperStreaming.test.ts  localWhisperStreaming.ts  ocr.test.ts  ocr.ts  overlayData.test.ts  overlayData.ts  overlaySafety.test.ts  overlaySafety.ts  (+36 more)
src/pages/: Dashboard.test.tsx  Dashboard.tsx  Practice.test.tsx  Practice.tsx  Sessions.test.tsx  Sessions.tsx  Settings.test.tsx  Settings.tsx
src/stores/: overlayStore.test.ts  overlayStore.ts
src/types/: ai.ts  collaboration.ts  session.ts  settings.ts
(+12 files in other folders)
