[package]
name = "caveman"
version = "0.1.0"
description = "Real-time interview copilot desktop shell"
authors = ["Caveman"]
edition = "2021"

[lib]
name = "caveman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
keyring-core = "1.0.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
windows-native-keyring-store = "1.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
